--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
+        <module>eureka</module>
         <module>svc-1</module>
         <module>svc-2</module>
+        <module>svc-2-api</module>
     </modules>
-
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -47,5 +48,9 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins></plugins>
+    </build>
 
 </project>
