--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
         <module>svc-1</module>
         <module>svc-2</module>
         <module>svc-2-api</module>
+        <module>grpc-api</module>
+        <module>grpc-client</module>
+        <module>grpc-service</module>
     </modules>
 
     <parent>
@@ -15,7 +18,6 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
     </parent>
-
 
     <groupId>com.mwz</groupId>
     <artifactId>spring-source-study</artifactId>
@@ -26,6 +28,8 @@
     <properties>
         <java.version>1.11</java.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+        <grpc.version>1.17.1</grpc.version>
+        <netty.version>4.1.30.Final</netty.version>
     </properties>
 
     <dependencies>
@@ -45,6 +49,39 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>2.2.1.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>2.2.1.RELEASE</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-common</artifactId>
+                <version>${netty.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
